[Fix] Chat private on mobile: fix UI in chat private screen

--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -181,7 +181,7 @@
                 display: table;
                 .avatar{
                     background: #e6e6e6;
-                    border-radius: 50%;
+                    border-radius: 20px;
                     width: 40px;
                     height: 40px;
                     display: table-cell;
